--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -11,6 +11,9 @@
     <nav id="navBar" class="navbar navbar-expand-lg">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <div id="logo"></div>
+          </li>
           <li class="nav-item">
             <form action='login' method='GET'>
                 <input class="btn btn-primary" id="btnLogin" type="submit" name="btnLogin" value="Log in">
@@ -25,12 +28,17 @@
       </div>
     </nav>
     <div id="homeImage">
-        <div class="d-flex justify-content-center" id="title">Welcome to FYST - Fight the depression!</div>
+        <div class="d-flex justify-content-center" id="title">Fight the depression!</div>
     </div>
-    <div id="subtitle">
-        <div> Free Yourself from</div>
-        <div> Stress & Struggle</div>
-        <div> Through Therapy</div>
+    <div id="fyst" class="d-flex justify-content-center">
+        <div id="welcome">Welcome to </div>
+        <div id="fystexpl">
+            <div><div id="f">F</div> <div id="fextra">ree</div></div>
+            <div id="ybig"><div id="y">Y</div> <div id="yextra">ourself from</div></div>
+            <div><div id="s">S</div> <div id="sextra">truggle</div></div>
+            <div><div id="t">T</div> <div id="textra">hrough</div></div>
+            <div><div id="t2">T</div> <div id="t2extra">herapy</div></div>
+        </div>
     </div>
     <div class="d-flex justify-content-center">
         <form action='chat' method='GET'>
@@ -38,10 +46,10 @@
         </form>
     </div>
     <div id="description">
-        <div>At FYST, not only do we provide free therapy to all kinds of people that</div>
-        <div>need it, we also create a personalized paper for each user of the application.</div>
-        <div>Our goal is to empower people to tell their story, to face their most</div>
-        <div>destructive problems and to make a difference in their lives</div>
+        <div>At FYSTT, not only do we provide free therapy to all kinds of people that</div>
+        <div>need it, we also create a personalized reports paper for each person that </div>
+        <div>uses the application. Our goal is to empower people to tell their story,</div>
+        <div>to face their most destructive problems and to make a difference in their lives</div>
     </div>
 
 
