--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<div id="logo"></div>
 <div class="column is-4 is-offset-4" id="allSignup">
     <h3 id="title" class="d-flex justify-content-center">Sign Up</h3>
     <div class="box">
