--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+                <div id="logo"></div>
+          </li>
+            <li class="nav-item">
+                <form action='/' btnLogoutmethod='GET'>
+                    <input class="btn btn-primary" type="submit" id="btnHome" name="btnHome" value="Home">
+                </form>
+              </li>
+            <li class="nav-item">
                 <form action='signup' method='GET'>
                     <input class="btn btn-primary" id="btnSignup" type="submit" name="btnSignup" value="Sign up">
                 </form>
