--- a/templates/my_message.html
+++ b/templates/my_message.html
@@ -5,18 +5,44 @@
     <title>My Messages</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/myMessage.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
 </head>
 <body>
 
+<nav id="navBar" class="navbar navbar-expand-lg">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <div id="logo"></div>
+          </li>
+          <li class="nav-item">
+            <form action='login' method='GET'>
+                <input class="btn btn-primary" id="btnLogout" type="submit" name="btnLogout" value="Log out">
+            </form>
+          </li>
+            <li class="nav-item">
+            <form action='/' method='GET'>
+                <input class="btn btn-primary" id="btnHome" type="submit" name="btnHome" value="Home">
+            </form>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
 <div id="title" class="d-flex justify-content-center">{{userName}}'s Messages</div>
 <!--<div id="table" class="d-flex justify-content-center">{{ table }}</div>-->
+<div id="allMes">
 <div id="slideContainer"></div>
-
+<div id="sendSec">
 <form class="msger-inputarea" action="myMessages" method='POST'>
-    <input type="text" name="sendTo" class="msger-input" id="sendToInput" placeholder="Send to">
-  <input type="text" name="mesText" class="msger-input" id="textInput" placeholder="Enter your message">
-  <button type="submit" onclick="clickAlert()" class="msger-send-btn">Send</button>
+    <div><input type="text" name="sendTo" class="msger-input" id="sendToInput" placeholder="Send to"></div>
+    <div><input type="text" name="mesText" class="msger-input" id="textInput" placeholder="Enter your message"></div>
+    <div><button id="sendBtn" type="submit" onclick="clickAlert()" class="msger-send-btn btn btn-primary">Send</button></div>
 </form>
+    </div>
+
+</div>
 
 <script>
 
@@ -38,9 +64,12 @@
     resultsMes.forEach(function(slide, index) {
         const ther = resultsTh[index];
         const sendMes = resultsSendMes[index];
-        if((slide !== "" && slide !== "[" && slide !== "]") && (sendMes !== "" && sendMes !== "[" && sendMes !== "]"))
+        console.log(slide);
+        console.log(sendMes);
+        console.log("AAAAAAAAA");
+        if((slide !== "[]" && slide !== "" && slide !== "[" && slide !== "]") && (sendMes !== "[]" && sendMes !== "" && sendMes !== "[" && sendMes !== "]"))
             str += '<li style="' +
-                'background-color: #fca4e2;' +
+                'background-color: #579ffb;' +
                 'padding: 15px;' +
                 'margin-bottom: 20px;' +
                 'font-size: 25px;' +
@@ -48,7 +77,8 @@
                 'border-radius: 15px 15px 15px 0px;">' +
                 '<div id="therSender">' + ther + '</div>' + slide + '</li>' +
                 '<li style="' +
-                'background-color: #fca4e2;' +
+                'background-color: #579ffb;' +
+                'margin-left: 240px;' +
                 'padding: 15px;' +
                 'margin-bottom: 20px;' +
                 'font-size: 25px;' +
@@ -78,7 +108,6 @@
   </div>
 </div>
 `;
-
       msgerChat.insertAdjacentHTML("beforeend", msgHTML);
       msgerChat.scrollTop += 500;
 
