--- a/templates/therapist_page.html
+++ b/templates/therapist_page.html
@@ -13,6 +13,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+                <div id="logo"></div>
+          </li>
+            <li class="nav-item">
                 <form action='/' method='GET'>
                     <input class="btn btn-primary" id="btnHome" type="submit" name="btnHome" value="Home">
                 </form>
